--- a/style.css
+++ b/style.css
@@ -1,27 +1,41 @@
-body{
-    background-color: black;
-    color: white;
-    font-family: monospace;
-}
-h1, h2, h3{
-    text-align: center;
-    text-decoration: underline;
-}
-form{
-    background-color: rgba(255, 255, 255, 0.514);
+ header {
+    margin: auto;
     text-align: center;
     font-size: 20px;
-}
-p,input{
-    color: black;
-}
-#calcular{
-    font-size: 1.2rem;
-    border-radius: 12%;
-    background-color: rgb(6, 6, 163);
-    color: aliceblue;
-}
-.imagen{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    background: black;
+  }
+  
+ .header__img {
+    width: 250px;
+    height: 200px;
+    margin: 5px;
+  }
+  
+ .header__leyenda--container {
+    padding: 30px;
+  }
+section div div img{
+    width: 30%;
+    height: 400px;
 }
+section{
+    padding: 10px;
+}
+.footer {
+    width: 100%;
+    padding: 4px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    background: #212529;
+    text-align: center;
+  }
+  
+.footer ul li {
+    padding-top: 10px;
+    list-style: none;
+    display: inline;
+    font-weight: 900;
+    margin: 10%;
+  }
