--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+ body {
+    background-color: lightgray;
+ }
  header {
     margin: auto;
     text-align: center;
@@ -12,16 +15,57 @@
     height: 200px;
     margin: 5px;
   }
-  
+  .header__leyenda {
+    color:#3c2d8c
+  }
  .header__leyenda--container {
     padding: 30px;
   }
 section div div img{
-    width: 30%;
+    width: 100%;
     height: 400px;
 }
 section{
     padding: 10px;
+}
+#showAllProducts {
+    display: flex;
+    flex-direction: row;
+    gap: 3em;
+    flex-wrap: wrap;
+    padding: 1em;
+}
+#showAllProducts div{
+    border: solid 5px black;
+    padding: 2px;
+}
+#cartList {
+    height: 500px;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+#cartList img {
+    width: 8em;
+    height: auto;
+    border: solid 3px black;
+}
+
+.showCart {
+    display: flex;
+    flex-direction: row;
+}
+.div{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+.div li{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2em;
 }
 .footer {
     width: 100%;
