--- a/style.css
+++ b/style.css
@@ -41,9 +41,10 @@ section{
     width: 20%;
 }
 #cartList {
-    width: 50%;
+    width: 70%;
     display: flex;
     flex-direction: column;
+    align-content: center;
 }
 
 #cartList img {
@@ -66,6 +67,10 @@ section{
     flex-direction: row;
     align-items: center;
     gap: 2em;
+    width: auto;
+}
+.div li h3 {
+    font-size: 1.2rem;
 }
 .footer {
     width: 100%;
