--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
  body {
-    background-color: lightgray;
+    background-color: black;
+    color: white;
  }
  header {
     margin: auto;
@@ -21,9 +22,12 @@
  .header__leyenda--container {
     padding: 30px;
   }
+li a {
+    font-family: "Dank Mono", ui-monospace, monospace;
+}
 section div div img{
     width: 100%;
-    height: 400px;
+    height: 100%;
 }
 section{
     padding: 10px;
@@ -36,11 +40,113 @@ section{
     padding: 1em;
 }
 #showAllProducts div{
-    border: solid 5px black;
+    display: grid;
+    grid-template-rows:70% 12% 8% 10% ;
+    border: solid 5px #3c2d8c;
     padding: 2px;
-    width: 20%;
+    width: 23%;
+    text-align: center;
+    align-items: center;
 }
+    
+#showAllProducts div h3{
+    font-family: "Dank Mono", ui-monospace, monospace;
+    margin: 0%;
+    font-size: 1.5rem;
+    background-clip: border-box;
+    background: linear-gradient(
+        to right, 
+        hsl(98 100% 62%), 
+        hsl(204 100% 59%)
+      );
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+}
+#showAllProducts div p{
+    font-family: "Dank Mono", ui-monospace, monospace;
+    font-size: 2.5rem;
+    margin: 0%;
+    color: #fff;
+    letter-spacing: -7px;
+    font-weight: 700;
+    text-transform: uppercase;
+    animation: blur .75s ease-out infinite;
+    text-shadow: 0px 0px 5px #fff, 0px 0px 7px #fff;
+}
+
+#showAllProducts div button{
+    grid-row: 4;
+    display: flex;
+    align-items: center;
+    font-family: "Dank Mono", ui-monospace, monospace;
+ width: 100%;
+ height: 50%;
+    padding: 0.6em 2em;
+    border: none;
+    outline: none;
+    color: rgb(255, 255, 255);
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    user-select: none;
+    -webkit-user-select: none;
+  touch-action: manipulation;
+ }
+ #showAllProducts div button:before{ 
+    content: "";
+    background: linear-gradient(
+        45deg,
+        #ff0000,
+        #ff7300,
+        #fffb00,
+        #48ff00,
+        #00ffd5,
+        #002bff,
+        #7a00ff,
+        #ff00c8,
+        #ff0000
+      );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing-button-85 20s linear infinite;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+    }
+    
+    @keyframes glowing-button-85 {
+      0% {
+        background-position: 0 0;
+      }
+      50% {
+        background-position: 400% 0;
+      }
+      100% {
+        background-position: 0 0;
+      }
+    }
+    
+#showAllProducts div button:after{
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #222;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+ }
 #cartList {
+    font-family: "Dank Mono", ui-monospace, monospace;
     width: 70%;
     display: flex;
     flex-direction: column;
