--- a/style.css
+++ b/style.css
@@ -162,6 +162,22 @@ section{
     flex-direction: column;
     align-content: center;
 }
+.titulosCarrito{
+    display: grid;
+    grid-template-columns: 15% 43% 15% 12% 15%; 
+}
+.titulosCarrito .liProducto{
+    text-align: center;
+    grid-column: 2;
+}
+.titulosCarrito .liPrecio{
+    text-align: center;
+    grid-column: 3;
+}
+.titulosCarrito .liCantidad{
+    grid-column: 4;
+}
+    
 
 #cartList img {
     width: 8em;
@@ -185,9 +201,62 @@ section{
     gap: 2em;
     width: auto;
 }
+#cantidad {
+    width: 3%;
+}
 .div li h3 {
     font-size: 1.2rem;
 }
+.vaciarCarrito {
+    -webkit-touch-callout: none;
+      -webkit-user-select: none;
+       -khtml-user-select: none;
+         -moz-user-select: none;
+          -ms-user-select: none;
+              user-select: none;
+          -webkit-tap-highlight-color: transparent;
+      width: 70%;
+      height: 50px;
+      cursor: pointer;
+      border: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #7f5a83;
+      background-image: linear-gradient(315deg, #7f5a83 0%, #222 74%);
+      background-size: 200% 100%;
+      background-position: left;
+      background-repeat: no-repeat;
+      transition: 500ms;
+  }
+  
+
+  .vaciarCarrito:before {
+      content: 'Vaciar Carrito';
+      color: rgba(255,255,255,0.5);
+      font-size: 16px;
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 48%;
+      height: 40px;
+      background-color: #1b2845;
+      background-image: linear-gradient(315deg, #222 0%, #111 74%);
+      transition: 500ms;
+  }
+  
+  .vaciarCarrito:hover {
+      background-position: right;
+  }
+  
+  .vaciarCarrito:before {
+      color: rgba(255,255,255,0.8);
+  }
+  
+  .vaciarCarrito:focus {
+      outline: none;
+  }
 .footer {
     width: 100%;
     padding: 4px;
