--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ header h3{
     font-family: "Dank Mono", ui-monospace, monospace;
     font-size: 30px;
 }
-
 li a {
     font-family: "Dank Mono", ui-monospace, monospace;
 }
@@ -209,19 +208,19 @@ section{
     display: flex;
     flex-direction: row;
 }
-.div{
+.divCart{
     display: flex;
     flex-direction: column;
     gap: 1em;
 }
-.div li{
+.divCart li{
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 2em;
     width: auto;
 }
-.div li h3 {
+.divCart li h3 {
     font-size: 1.2rem;
 }
 .buttonComprar{
